update stack n contact

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV – Julien L. – Développeur Web Junior</title>
+    <title>CV Julien Lemaire / Développeur Web Junior</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   </head>
@@ -17,10 +17,11 @@
         <p>Développeur Web Full-Stack Junior</p>
 
         <div class="contact">
-          <div><i class="fas fa-map-marker-alt"></i> Beaufou (85)</div>
-          <div><i class="far fa-envelope"></i> julien_lemaire_62@yahoo.fr</div>
-          <div><i class="fab fa-github"></i> <a href="https://github.com/JulienLdev" target="_blank">JulienLdev</a></div>
-          <div><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/julien-lemaire-952270382/" target="_blank">LinkedIn</a></div>
+          <div><i class="fas fa-calendar-alt"></i>31 ans</div>
+          <div><i class="fas fa-map-marker-alt"></i>Beaufou (85)</div>
+          <div><i class="far fa-envelope"></i>julien_lemaire_62@yahoo.fr</div>
+          <div><i class="fab fa-github"></i><a href="https://github.com/JulienLdev" target="_blank">JulienLdev</a></div>
+          <div><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/julien-lemaire-952270382/" target="_blank">LinkedIn</a></div>
         </div>
 
       </div>
@@ -41,26 +42,29 @@
             <h4>Stack principale</h4>
             <ul>
               <li>Ruby on Rails</li>
-              <li>JavaScript</li>
+              <li>JavaScript (ES6)</li>
               <li>HTML5 / CSS3</li>
               <li>PostgreSQL</li>
+              <li>API REST</li>
             </ul>
           </div>
           <div class="skill-card">
             <h4>Front-end & UI</h4>
             <ul>
-              <li>Stimulus.js</li>
-              <li>React (bases)</li>
+              <li>Hotwire (Turbo / Stimulus)</li>
               <li>Responsive Design</li>
+              <li>UX/UI orientée produit</li>
+              <li>Intégration Figma</li>
               <li>CSS Grid / Flexbox</li>
             </ul>
           </div>
           <div class="skill-card">
-            <h4>Outils & méthodes</h4>
+            <h4>Back-end & méthodes</h4>
             <ul>
-              <li>Git / GitHub</li>
-              <li>API REST</li>
-              <li>MVC</li>
+              <li>Pair programming</li>
+              <li>Architecture MVC</li>
+              <li>CRUD & relations ActiveRecord</li>
+              <li>Déploiement (Heroku)</li>
               <li>Agile / Scrum</li>
             </ul>
           </div>
