ajustement logo, format a4

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
       <!-- INTRO -->
       <div class="intro">
-        Développeur web full-stack junior formé au Wagon.
-        J’ai plus de 2 ans d’expérience entrepreneuriale, chez ExigeAuto,
-        où j’étais responsable du site web et des opérations.
-        Je souhaite intégrer mon premier poste en développement web pour renforcer mes compétences.
+        Développeur web full-stack junior avec plus de 2 ans d’expérience
+        entrepreneuriale chez ExigeAuto. Responsable du site web et des
+        opérations, j’ai développé mes compétences en gestion de projet,
+        développement web et résolution de problèmes, et je souhaite contribuer
+        à des projets web innovants.
       </div>
 
       <!-- COMPÉTENCES TECHNIQUES -->
@@ -64,7 +65,7 @@
               <li>Pair programming</li>
               <li>Architecture MVC</li>
               <li>CRUD & relations ActiveRecord</li>
-              <li>Déploiement (Heroku)</li>
+              <li>Tests / qualité du code</li>
               <li>Agile / Scrum</li>
             </ul>
           </div>
@@ -79,10 +80,12 @@
         <div class="experience">
           <div class="exp-head">
             <img src="images/lewagon.png" alt="Logo Le Wagon" class="exp-logo">
-            <div class="exp-info">
-              <h3>Formation intensive Développeur Web Full-Stack</h3>
-              <div class="exp-date">Oct. 2025 – Déc. 2025</div>
-              <div>Le Wagon • Nantes</div>
+            <div class="exp-body">
+              <h4>Formation intensive Développeur Web Full-Stack</h4>
+              <div class="exp-info">
+                <div>Le Wagon <span class="sep">|</span> Nantes</div>
+                <div class="exp-date">Oct. 2025 – Déc. 2025</div>
+              </div>
             </div>
           </div>
           <p>
@@ -93,9 +96,10 @@
           </p>
           <ul>
             <li>
-              <a href="https://projects.lewagon.com/projects/keepcalm" target="_blank">
+              <a href="https://projects.lewagon.com/projects/keepcalm" target="_blank" style="color: inherit; text-decoration: underline;">
                 KeepCalm
-              </a> : application collaborative de gestion de projets (authentification, CRUD, API REST)
+              </a>: application collaborative utilisée pour
+               gérer 2 projets, avec authentification et CRUD complet
             </li>
             <li>Développement full-stack : base de données, logique métier, front-end</li>
             <li>Travail en équipe : Git/GitHub, pull requests</li>
@@ -105,6 +109,7 @@
             <span>Ruby on Rails</span>
             <span>JavaScript</span>
             <span>React</span>
+            <span>Hotwire</span>
             <span>PostgreSQL</span>
             <span>Git</span>
             <span>API REST</span>
@@ -115,17 +120,24 @@
         <div class="experience">
           <div class="exp-head">
             <img src="images/exigeauto.png" alt="Logo ExigeAuto" class="exp-logo">
-            <div class="exp-info">
-              <h3>Dirigeant – ExigeAuto</h3>
-              <div class="exp-date">Juin 2023 – Aujourd’hui</div>
-              <div>Micro-entreprise • Esthétique automobile</div>
+            <div class="exp-body">
+              <h4>Dirigeant – ExigeAuto</h4>
+              <div class="exp-info">
+                <div>Micro-entreprise <span class="sep">|</span> Esthétique automobile</div>
+                <div class="exp-date">Juin 2023 – Aujourd’hui</div>
+              </div>
             </div>
           </div>
           <p>
-            Création et gestion complète d’une micro-entreprise, impliquant autonomie et organisation.
-          </p>
+  Création et gestion complète d’une micro-entreprise, démontrant autonomie et sens de l’organisation,
+  avec près de 50 avis 5 étoiles sur
+  <a href="https://www.google.com/search?q=exigeauto" target="_blank" style="color: inherit; text-decoration: underline;">
+    Google.
+  </a>
+</p>
+
           <ul>
-            <li>Développement web : site WordPress, optimisation SEO</li>
+            <li>Développement web : site WordPress optimisé SEO avec +35% de visites mensuelles</li>
             <li>Gestion de projet : planification, relation client</li>
             <li>Résolution de problèmes techniques et adaptation rapide</li>
           </ul>
