--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             <span>Ruby on Rails</span>
             <span>JavaScript</span>
             <span>React</span>
+            <span>IA générative (LLMs)</span>
             <span>Hotwire</span>
             <span>PostgreSQL</span>
             <span>Git</span>
