add SQL in skills

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         à des projets web innovants.
       </div>
 
+
       <!-- COMPÉTENCES TECHNIQUES -->
       <div class="block">
         <h2><i class="far fa-keyboard"></i> Compétences techniques</h2>
@@ -43,9 +44,9 @@
             <h4>Stack principale</h4>
             <ul>
               <li>Ruby on Rails</li>
+              <li>SQL / PostgreSQL</li>
               <li>JavaScript (ES6)</li>
               <li>HTML5 / CSS3</li>
-              <li>PostgreSQL</li>
               <li>API REST</li>
             </ul>
           </div>
@@ -101,17 +102,17 @@
               </a>: application collaborative utilisée pour
                gérer 2 projets, avec authentification et CRUD complet
             </li>
-            <li>Développement full-stack : base de données, logique métier, front-end</li>
+            <li>Développement full-stack : bases de données SQL (tables, relations, requêtes), logique métier et front-end</li>
             <li>Travail en équipe : Git/GitHub, pull requests</li>
             <li>Interfaces responsive et expérience utilisateur</li>
           </ul>
           <div class="tags">
             <span>Ruby on Rails</span>
             <span>JavaScript</span>
+            <span>SQL (PostgreSQL)</span>
             <span>React</span>
             <span>IA générative (LLMs)</span>
             <span>Hotwire</span>
-            <span>PostgreSQL</span>
             <span>Git</span>
             <span>API REST</span>
           </div>
