add titre rcncp

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div class="exp-head">
             <img src="images/lewagon.png" alt="Logo Le Wagon" class="exp-logo">
             <div class="exp-body">
-              <h4>Formation intensive Développeur Web Full-Stack</h4>
+              <h4>Formation Développeur Web Full-Stack (Titre RNCP niveau 6 – Bac +3/4)</h4>
               <div class="exp-info">
                 <div>Le Wagon <span class="sep">|</span> Nantes</div>
                 <div class="exp-date">Oct. 2025 – Déc. 2025</div>
